--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3047,7 +3047,7 @@
     "#nl025\n",
     "url = 'https://100api.orai.dev/nl025'\n",
     "data = {\n",
-    "  \"text\": \"my name is orai\"\n",
+    "  \"input_text\": \"i love watching golf ! flag in hole ️ not\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
