--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3094,7 +3094,7 @@
     "#nl026\n",
     "url = 'https://100api.orai.dev/nl026'\n",
     "data = {\n",
-    "  \"input_text\": \"i love watching golf ! flag in hole ️ not\"\n",
+    "  \"sentence\": \"He was the son of Máel Dúin mac Máele Fithrich, and gra\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
