--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3141,7 +3141,7 @@
     "#nl027\n",
     "url = 'https://100api.orai.dev/nl027'\n",
     "data = {\n",
-    "  \"sentence\": \"He was the son of Máel Dúin mac Máele Fithrich, and gra\"\n",
+    "  \"sentence\": \"Barack Obama was born in Honolulu, Hawaii.\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
