--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3188,7 +3188,7 @@
     "#nl028\n",
     "url = 'https://100api.orai.dev/nl028'\n",
     "data = {\n",
-    "  \"sentence\": \"Barack Obama was born in Honolulu, Hawaii.\"\n",
+    "  \"sentence\": \"i go to scoolll\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
