--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3235,7 +3235,7 @@
     "#nl031\n",
     "url = 'https://100api.orai.dev/nl031'\n",
     "data = {\n",
-    "  \"sentence\": \"i go to scoolll\"\n",
+    "  \"sentence\": \"tôi đi học\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
