--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3228,9 +3228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sentence': 'tôi đi học'}\n",
+      "{'status': 'success', 'data': {'status': 200, 'message': 'Thành công', 'sentence': 'tôi đi học', 'intent': 'chinh_tri_xa_hoi'}}\n"
+     ]
+    }
+   ],
    "source": [
     "#nl031\n",
     "url = 'https://100api.orai.dev/nl031'\n",
@@ -3251,7 +3260,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nl033_1\n",
+    "url = 'https://100api.orai.dev/nl033_1'\n",
+    "data = {\n",
+    "  \"sentence\": \"tôi đi học\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
