--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3257,14 +3257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#nl033_1\n",
     "url = 'https://100api.orai.dev/nl033_1'\n",
     "data = {\n",
-    "  \"sentence\": \"tôi đi học\"\n",
+    "  \"input\": \"thanh minh trong tiết tháng 3\",\n",
+    "  \"number_word\": 10\n",
     "}\n",
     "  \n",
     "headers = {\n",
@@ -3274,6 +3275,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
