--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3259,7 +3259,16 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': 'thanh minh trong tiết tháng 3', 'number_word': 10}\n",
+      "{'data': ['thanh minh trong tiết tháng 3', 'ba hàn mông trần duyên mê', 'ở đây trêu thiu thiu nối', 'niềm thai hai bề sang quan', 'khao giở ngày đông phím soi'], 'status': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "#nl033_1\n",
     "url = 'https://100api.orai.dev/nl033_1'\n",
@@ -3281,7 +3290,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nl033_2\n",
+    "url = 'https://100api.orai.dev/nl033_2'\n",
+    "data = {\n",
+    "  \"input\": \"thanh minh trong tiết tháng 3\",\n",
+    "  \"number_word\": 10\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
