--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3294,7 +3294,7 @@
     "#nl033_2\n",
     "url = 'https://100api.orai.dev/nl033_2'\n",
     "data = {\n",
-    "  \"input\": \"thanh minh trong tiết tháng 3\",\n",
+    "  \"input\": \"i am a good boy\",\n",
     "  \"number_word\": 10\n",
     "}\n",
     "  \n",
