--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3287,9 +3287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': 'i am a good boy', 'number_word': 10}\n",
+      "{'data': ['i am a good boy', 'so much in the bed', 'at home gleaming music to', 'neck to stare to neck', 'days so i has emotions'], 'status': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "#nl033_2\n",
     "url = 'https://100api.orai.dev/nl033_2'\n",
@@ -3305,6 +3314,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
