--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3320,7 +3320,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sp001\n",
+    "url = 'https://100api.orai.dev/sp001'\n",
+    "data = {\n",
+    "  \"input\": \"i am a good boy\",\n",
+    "  \"number_word\": 10\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
