--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3324,8 +3324,7 @@
     "#sp001\n",
     "url = 'https://100api.orai.dev/sp001'\n",
     "data = {\n",
-    "  \"input\": \"i am a good boy\",\n",
-    "  \"number_word\": 10\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
