--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3317,7 +3317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3339,7 +3339,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, json=data, headers=headers)\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
