--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3378,7 +3378,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sp003\n",
+    "url = 'https://100api.orai.dev/sp003'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
