--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3382,13 +3382,13 @@
     "#sp003\n",
     "url = 'https://100api.orai.dev/sp003'\n",
     "data = {\n",
-    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
+    "  \"input_text\": \"like object on which you can call functions read or read\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
