--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3416,8 +3416,9 @@
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, json=data, headers=headers)\n",
-    "print(data)\n",
-    "print(response.json())"
+    "with open('audio.wav', 'wb') as f:\n",
+    "            for chunk in response:\n",
+    "                f.write(chunk)"
    ]
   },
   {
