--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3375,7 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3389,7 +3389,7 @@
     "        'accept': 'audio/wav',\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, json=data, headers=headers)\n",
+    "response = requests.post(url, json=data, headers=headers,allow_redirects=True)\n",
     "with open('audio.wav', 'wb') as f:\n",
     "            for chunk in response:\n",
     "                f.write(chunk)"
