--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3375,7 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3390,6 +3390,26 @@
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, json=data, headers=headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
    ]
   },
   {
