--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3394,23 +3394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'HTTPResponse' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/oraichain/Desktop/test 100 api/100API.ipynb Cell 105\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000104?line=0'>1</a>\u001b[0m response\u001b[39m.\u001b[39;49mraw()\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'HTTPResponse' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.raw"
+    "response.status_code"
    ]
   },
   {
