--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3389,7 +3389,9 @@
     "        'accept': 'audio/wav',\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, json=data, headers=headers)\n"
+    "response = requests.post(url, json=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
    ]
   },
   {
