--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3419,7 +3419,20 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#sp004\n",
+    "url = 'https://100api.orai.dev/sp004'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
