--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3512,9 +3512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58'}\n",
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#sp006_3\n",
     "url = 'https://100api.orai.dev/sp006_3'\n",
@@ -3535,7 +3544,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sp007\n",
+    "url = 'https://100api.orai.dev/sp006_3'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
