--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3546,9 +3546,10 @@
    "outputs": [],
    "source": [
     "#sp007\n",
-    "url = 'https://100api.orai.dev/sp006_3'\n",
+    "url = 'https://100api.orai.dev/sp007'\n",
     "data = {\n",
-    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\",\n",
+    "  \"input_target_hash\": \"QmY8BgYUtRqRgK5NF6TwQkhVVZ9BtWp4noNS9LrDwizynr\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
