--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3566,11 +3566,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sp007\n",
-    "url = 'https://100api.orai.dev/sp007'\n",
+    "#sp008\n",
+    "url = 'https://100api.orai.dev/sp008'\n",
     "data = {\n",
-    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\",\n",
-    "  \"input_target_hash\": \"QmY8BgYUtRqRgK5NF6TwQkhVVZ9BtWp4noNS9LrDwizynr\"\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
