--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3618,9 +3618,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58'}\n",
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#sp009\n",
     "url = 'https://100api.orai.dev/sp009'\n",
@@ -3632,9 +3641,22 @@
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, data=data, headers=headers)\n",
+    "with open('local_filename.wav', 'wb') as f:\n",
+    "            for chunk in r.iter_content(chunk_size=8192): \n",
+    "                # If you have chunk encoded response uncomment if\n",
+    "                # and set chunk_size parameter to None.\n",
+    "                #if chunk: \n",
+    "                f.write(chunk)\n",
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
