--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3618,15 +3618,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input_source_hash': 'QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58'}\n",
-      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     "ename": "NameError",
+     "evalue": "name 'r' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/oraichain/Desktop/test 100 api/100API.ipynb Cell 112\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=9'>10</a>\u001b[0m response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mpost(url, data\u001b[39m=\u001b[39mdata, headers\u001b[39m=\u001b[39mheaders)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=10'>11</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mlocal_filename.wav\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=11'>12</a>\u001b[0m             \u001b[39mfor\u001b[39;00m chunk \u001b[39min\u001b[39;00m r\u001b[39m.\u001b[39miter_content(chunk_size\u001b[39m=\u001b[39m\u001b[39m8192\u001b[39m): \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=12'>13</a>\u001b[0m                 \u001b[39m# If you have chunk encoded response uncomment if\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=13'>14</a>\u001b[0m                 \u001b[39m# and set chunk_size parameter to None.\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=14'>15</a>\u001b[0m                 \u001b[39m#if chunk: \u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=15'>16</a>\u001b[0m                 f\u001b[39m.\u001b[39mwrite(chunk)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000108?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(data)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'r' is not defined"
      ]
     }
    ],
@@ -3642,7 +3645,7 @@
     "    }\n",
     "response = requests.post(url, data=data, headers=headers)\n",
     "with open('local_filename.wav', 'wb') as f:\n",
-    "            for chunk in r.iter_content(chunk_size=8192): \n",
+    "            for chunk in response.iter_content(chunk_size=8192): \n",
     "                # If you have chunk encoded response uncomment if\n",
     "                # and set chunk_size parameter to None.\n",
     "                #if chunk: \n",
