--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3618,7 +3618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3626,7 +3626,7 @@
      "output_type": "stream",
      "text": [
       "{'input_source_hash': 'QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58'}\n",
-      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+      "{}\n"
      ]
     }
    ],
@@ -3644,6 +3644,26 @@
     "\n",
     "print(data)\n",
     "print(response.links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://100api.orai.dev/sp009'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.url"
    ]
   },
   {
