--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'sp001.wav',\n",
-       " 'Hash': 'QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58',\n",
-       " 'Size': '441312'}"
+       "{'Name': 'taunt.wav',\n",
+       " 'Hash': 'QmY8BgYUtRqRgK5NF6TwQkhVVZ9BtWp4noNS9LrDwizynr',\n",
+       " 'Size': '91298'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./sp001.wav','rb')}\n",
+    "files = {'file': open('./taunt.wav','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
