--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3651,7 +3651,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ts001\n",
+    "url = 'https://100api.orai.dev/ts001'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "\n",
+    "print(data)\n",
+    "print(response.links)"
+   ]
   },
   {
    "cell_type": "code",
