--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3655,6 +3655,7 @@
     "#ts001\n",
     "url = 'https://100api.orai.dev/ts001'\n",
     "data = {\n",
+    "    \"time_col\": \"\"\n",
     "  \"input_source_hash\": \"QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo\"\n",
     "}\n",
     "  \n",
