--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3655,7 +3655,8 @@
     "#ts001\n",
     "url = 'https://100api.orai.dev/ts001'\n",
     "data = {\n",
-    "    \"time_col\": \"\"\n",
+    "    \"time_col\": \"Month\",\n",
+    "    \"value_col\": \"#Passengers\",\n",
     "  \"input_source_hash\": \"QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo\"\n",
     "}\n",
     "  \n",
