--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3657,6 +3657,7 @@
     "data = {\n",
     "    \"time_col\": \"Month\",\n",
     "    \"value_col\": \"#Passengers\",\n",
+    "    \"predict_length\": 1,\n",
     "  \"input_source_hash\": \"QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo\"\n",
     "}\n",
     "  \n",
