--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3618,7 +3618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -3626,7 +3626,7 @@
      "output_type": "stream",
      "text": [
       "{'input_source_hash': 'QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58'}\n",
-      "{}\n"
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -3643,14 +3643,23 @@
     "response = requests.post(url, data=data, headers=headers)\n",
     "\n",
     "print(data)\n",
-    "print(response.links)"
+    "print(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'time_col': 'Month', 'value_col': '#Passengers', 'predict_length': 1, 'input_source_hash': 'QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo'}\n",
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
     "#ts001\n",
     "url = 'https://100api.orai.dev/ts001'\n",
@@ -3667,7 +3676,7 @@
     "response = requests.post(url, data=data, headers=headers)\n",
     "\n",
     "print(data)\n",
-    "print(response.links)"
+    "print(response.json())"
    ]
   },
   {
