--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3648,7 +3648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3656,7 +3656,7 @@
      "output_type": "stream",
      "text": [
       "{'time_col': 'Month', 'value_col': '#Passengers', 'predict_length': 1, 'input_source_hash': 'QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo'}\n",
-      "{}\n"
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
      ]
     }
    ],
@@ -3673,7 +3673,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
     "\n",
     "print(data)\n",
     "print(response.json())"
