--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3681,6 +3681,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data.csv;type=text/csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/oraichain/Desktop/test 100 api/100API.ipynb Cell 114\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=2'>3</a>\u001b[0m headers \u001b[39m=\u001b[39m {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=3'>4</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39maccept\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mapplication/json\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=4'>5</a>\u001b[0m     \u001b[39m# requests won't add a boundary if this header is set when you pass files=\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=5'>6</a>\u001b[0m     \u001b[39m# 'Content-Type': 'multipart/form-data',\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=6'>7</a>\u001b[0m }\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=8'>9</a>\u001b[0m files \u001b[39m=\u001b[39m {\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=9'>10</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mtime_col\u001b[39m\u001b[39m'\u001b[39m: (\u001b[39mNone\u001b[39;00m, \u001b[39m'\u001b[39m\u001b[39mMonth\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=10'>11</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mvalue_col\u001b[39m\u001b[39m'\u001b[39m: (\u001b[39mNone\u001b[39;00m, \u001b[39m'\u001b[39m\u001b[39m#Passengers\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=11'>12</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mpredict_length\u001b[39m\u001b[39m'\u001b[39m: (\u001b[39mNone\u001b[39;00m, \u001b[39m'\u001b[39m\u001b[39m1\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=12'>13</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39minput_source\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mdata.csv;type=text/csv\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=13'>14</a>\u001b[0m }\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000113?line=15'>16</a>\u001b[0m response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mpost(\u001b[39m'\u001b[39m\u001b[39mhttps://100api.orai.dev/ts001\u001b[39m\u001b[39m'\u001b[39m, headers\u001b[39m=\u001b[39mheaders, files\u001b[39m=\u001b[39mfiles)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data.csv;type=text/csv'"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "headers = {\n",
+    "    'accept': 'application/json',\n",
+    "    # requests won't add a boundary if this header is set when you pass files=\n",
+    "    # 'Content-Type': 'multipart/form-data',\n",
+    "}\n",
+    "\n",
+    "files = {\n",
+    "    'time_col': (None, 'Month'),\n",
+    "    'value_col': (None, '#Passengers'),\n",
+    "    'predict_length': (None, '1'),\n",
+    "    'input_source': open('data.csv';type='text/csv', 'rb'),\n",
+    "}\n",
+    "\n",
+    "response = requests.post('https://100api.orai.dev/ts001', headers=headers, files=files)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
