--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3709,7 +3709,7 @@
     "    'time_col': (None, 'Month'),\n",
     "    'value_col': (None, '#Passengers'),\n",
     "    'predict_length': (None, '1'),\n",
-    "    'input_source': open('data.csv';type='text/csv', 'rb'),\n",
+    "    'input_source': open('data.csv', 'rb'),\n",
     "}\n",
     "\n",
     "response = requests.post('https://100api.orai.dev/ts001', headers=headers, files=files)\n"
