--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3698,7 +3698,8 @@
     "    'time_col': (None, 'Month'),\n",
     "    'value_col': (None, '#Passengers'),\n",
     "    'predict_length': (None, '1'),\n",
-    "    'input_source': open('data.csv', 'rb'),\n",
+    "    \"input_source_hash\": (None,\"QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo\"),\n",
+    "    \n",
     "}\n",
     "\n",
     "response = requests.post('https://100api.orai.dev/ts001', headers=headers, files=files)\n"
