--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6041,7 +6041,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#gn002\n",
+    "url = 'https://100api.orai.dev/sp009'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "\n",
+    "print(data)\n",
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
