--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6043,7 +6043,7 @@
    "outputs": [],
    "source": [
     "#gn002\n",
-    "url = 'https://100api.orai.dev/sp009'\n",
+    "url = 'https://100api.orai.dev/gn002'\n",
     "data = {\n",
     "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
     "}\n",
