--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6045,7 +6045,9 @@
     "#gn002\n",
     "url = 'https://100api.orai.dev/gn002'\n",
     "data = {\n",
-    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\"\n",
+    "  \"input_source_hash\": \"QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\",\n",
+    "  \"input_style_hash\": \"QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b\",\n",
+    "  \"blending_ratio\": 0.3\n",
     "}\n",
     "  \n",
     "headers = {\n",
