--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6038,18 +6038,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'requests' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/oraichain/Desktop/test 100 api/100API.ipynb Cell 115\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=2'>3</a>\u001b[0m data \u001b[39m=\u001b[39m {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=3'>4</a>\u001b[0m   \u001b[39m\"\u001b[39m\u001b[39minput_source_hash\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mQmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=4'>5</a>\u001b[0m   \u001b[39m\"\u001b[39m\u001b[39minput_style_hash\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mQmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=5'>6</a>\u001b[0m   \u001b[39m\"\u001b[39m\u001b[39mblending_ratio\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m0.3\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=6'>7</a>\u001b[0m }\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=8'>9</a>\u001b[0m headers \u001b[39m=\u001b[39m {\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=9'>10</a>\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mAuthorization\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mai_market\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=10'>11</a>\u001b[0m     }\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=11'>12</a>\u001b[0m response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mpost(url, data\u001b[39m=\u001b[39mdata, headers\u001b[39m=\u001b[39mheaders)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(data)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Desktop/test%20100%20api/100API.ipynb#ch0000114?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(response)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmbUftpYPE1eTRz8bKa4RvNkUtbYCZYm7uf826ZxZgnw58', 'input_style_hash': 'QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b', 'blending_ratio': 0.3}\n",
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -6068,7 +6065,7 @@
     "response = requests.post(url, data=data, headers=headers)\n",
     "\n",
     "print(data)\n",
-    "print(response)"
+    "print(response.json())"
    ]
   },
   {
