--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'data.csv',\n",
-       " 'Hash': 'QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo',\n",
-       " 'Size': '1756'}"
+       "{'Name': 'bus.jpeg',\n",
+       " 'Hash': 'QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ',\n",
+       " 'Size': '487570'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./data.csv','rb')}\n",
+    "files = {'file': open('./bus.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
