--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6040,7 +6040,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ', 'input_style_hash': 'QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b', 'blending_ratio': 0.3}\n",
+      "{'Hash': 'QmcE8DhSD1uwHsZjxqCdZ7w195pHRc3gDqj9tqZjb8ZmNJ', 'Name': 'file', 'Size': '41495'}\n"
+     ]
+    }
+   ],
    "source": [
     "#gn002\n",
     "url = 'https://100api.orai.dev/gn002'\n",
@@ -6064,7 +6073,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#gn003\n",
+    "url = 'https://100api.orai.dev/gn002'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ\",\n",
+    "  \"input_style_hash\": \"QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b\",\n",
+    "  \"blending_ratio\": 0.3\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
