--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6078,7 +6078,7 @@
     "url = 'https://100api.orai.dev/gn003'\n",
     "data = {\n",
     "  \"input_source_hash\": \"QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ\",\n",
-    "  \"input_style_hash\": \"QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b\",\n",
+    "  \"model_type\": \"QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b\",\n",
     "  \"blending_ratio\": 0.3\n",
     "}\n",
     "  \n",
