--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6078,8 +6078,8 @@
     "url = 'https://100api.orai.dev/gn003'\n",
     "data = {\n",
     "  \"input_source_hash\": \"QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ\",\n",
-    "  \"model_type\": \"QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b\",\n",
-    "  \"blending_ratio\": 0.3\n",
+    "  \"model_type\": \"Monet\",\n",
+    "  \"config_styles\": [2,3,5]\n",
     "}\n",
     "  \n",
     "headers = {\n",
