--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6105,7 +6105,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#gn005\n",
+    "url = 'https://100api.orai.dev/gn005'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ\",\n",
+    "  \"model_type\": \"Monet\",\n",
+    "  \"config_styles\": \"[2,3,5]\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
