--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6109,9 +6109,7 @@
     "#gn005\n",
     "url = 'https://100api.orai.dev/gn005'\n",
     "data = {\n",
-    "  \"input_source_hash\": \"QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ\",\n",
-    "  \"model_type\": \"Monet\",\n",
-    "  \"config_styles\": \"[2,3,5]\"\n",
+    "  \"input_source_hash\": \"QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
